--- a/config
+++ b/config
@@ -37,3 +37,9 @@ monitor_stop_time=22:00
 
 # Time to perform housekeeping
 housekeeping_start_time=23:00
+
+# Output directory for graphs
+output_dir=output
+
+# Plot data file
+plot_file=data.plot
