--- a/config
+++ b/config
@@ -10,6 +10,12 @@
 # RS485 USB ID, as shown by 'lsusb'
 rs485_usb_id="067b:2303"
 
+# Directory where to store data and outputs
+data_dir=/data/pvm
+
+# Output directory for graphs
+output_dir=/data/pvm/output
+
 # Database filename
 dbfile=pvm.db
 
@@ -43,9 +49,6 @@ monitor_stop_time=22:00
 
 # Time to perform housekeeping
 housekeeping_start_time=23:00
-
-# Output directory for graphs
-output_dir=output
 
 # Plot data files
 daily_details_plot_file=daily_details.plot
