--- a/config
+++ b/config
@@ -17,14 +17,14 @@ data_dir=/data/pvm
 output_dir=/data/pvm/output
 
 # Database filename
-dbfile=pvm.db
+dbfile=/data/pvm/pvm.db
 
 # Filenames for real-time statistics
 rtfile=/data/pvm/pvm-rt.out
 rtfile_json=/data/pvm/www/rt.json
 
 # Log filename
-logfile=pvm.log
+logfile=/data/pvm/pvm.log
 
 # Loglevel. Available values: debug, info, warning, error, critical
 loglevel=info
